# generador_contenido_educativo_llm

./: README.md  algebra_lineal.txt  contenido.txt  content.py  evaluator.py  lecture_notes_algebra_lineal.md  main.py  pyproject.toml  requirements.txt  syllabus.py  test.py
edu_content_generator/: __init__.py  content.py  limiter.py  syllabus.py
